--- a/SpringMVCHibernateWithSpringSecurityExample/src/main/resources/messages.properties
+++ b/SpringMVCHibernateWithSpringSecurityExample/src/main/resources/messages.properties
@@ -2,6 +2,6 @@ NotEmpty.user.firstName=Nombre no puede estar en blanco.
 NotEmpty.user.lastName=Apellido no puede estar en blanco.
 NotEmpty.user.email=Email no puede estar en blanco.
 NotEmpty.user.password=Password no puede estar en blanco.
-NotEmpty.user.ssoId=SSO ID no puede estar en blanco.
+NotEmpty.user.ssoId=Nombre de usuario no puede estar en blanco.
 NotEmpty.user.userProfiles=Debe selecionar al menos un rol.
-non.unique.ssoId=SSO ID {0} ya existe. Por favor ingrese uno diferente.
+non.unique.ssoId=Nombre de usuario {0} ya existe. Por favor ingrese uno diferente.
