--- a/SpringMVCHibernateWithSpringSecurityExample/src/main/resources/locale/messages.properties
+++ b/SpringMVCHibernateWithSpringSecurityExample/src/main/resources/locale/messages.properties
@@ -10,6 +10,7 @@ app.title4=Tu innovacion es un proyecto para aquellas personas que quieren ayuda
 app.inicia=Inicia sesion
 app.usuario=Usuario
 app.contrase\u00f1a=Contrase\u00f1a
+app.welcome= , Bienvenido a Tu Innovacion
 
 app.nav.home=Inicio
 app.nav.about=Quienes somos
