--- a/SpringMVCHibernateWithSpringSecurityExample/src/main/resources/locale/messages_en.properties
+++ b/SpringMVCHibernateWithSpringSecurityExample/src/main/resources/locale/messages_en.properties
@@ -10,6 +10,7 @@ app.title4=Your innovation is a project for those people who want to help the wo
 app.inicia=Start
 app.usuario=User
 app.contrase\u00f1a=Password
+app.welcome= , Welcome to your Innovation
 
 app.nav.home=Home
 app.nav.about=Who we are
